src/tests/fixtures/generics/referencingMethodGeneric.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
type Query = unknown;

/** @gqlField */
export function greeting<T>(_: Query): T {
  return null as any;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/generics/referencingMethodGeneric.invalid.ts:5:40 - error: Type parameters are not supported in this context.

5 export function greeting<T>(_: Query): T {
                                         ~
